@@ -61,6 +61,8 @@ Bug fixes:
 - PR#5887: move the byterun/*.h headers to byterun/caml/*.h to avoid header
     name clashes
   (Jérôme Vouillon and Adrien Nader and Peter Zotov)
+- PR#6081: ocaml should add script's directory to search path, not current directory
+  (Thomas Leonard and Damien Doligez)
 - PR#6560: Wrong failure message for {Int32,Int64,NativeInt}.of_string
   (Maxime Dénès and Gabriel Scherer)
 - PR#6648: show_module should indicate its elision
